# space_simulation

./: CMakeLists.txt
include/glad/: glad.h
include/headers/: Blackhole.h  Camera.h  Constants.h  LightRay.h  Mesh.h  Texture.h  VAO.h  shaderClass.h
shaders/: light_vert.glsl  raymarching_frag.glsl  screen_vert.glsl
src/: Blackhole.cpp  Camera.cpp  LightRay.cpp  Mesh.cpp  Texture.cpp  glad.c  main.cpp
